# wai-app-file-cgi

./: .travis.yml  CHANGELOG.md  README.md  SendFile.hs  Test.hs  wai-app-file-cgi.cabal
.github/workflows/: haskell.yml
Network/Wai/Application/: CGI.hs  Classic.hs  Date.hs  EnumLine.hs  Field.hs  File.hs  FileInfo.hs  Header.hs  Lang.hs  MaybeIter.hs  Range.hs  Types.hs  Utils.hs
Network/Wai/Application/Classic/: CGI.hs  Conduit.hs  Date.hs  Def.hs  EnumLine.hs  EventSource.hs  Field.hs  File.hs  FileInfo.hs  Header.hs  Lang.hs  MaybeIter.hs  Path.hs  Range.hs  Redirect.hs  RevProxy.hs  Status.hs  Types.hs  Utils.hs
test/: ClassicSpec.hs  Spec.hs  Test.hs  doctests.hs  mighty.conf  mighty.route
test/cgi-bin/: broken  echo-env  index.cgi
test/data/: post
test/html/: index.html  no_extension
test/html/ja/: index.html.ja
