Name:                   wai-app-file-cgi
Version:                0.0.0
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Synopsis:               File/CGI App of WAI
Description:            This WAI application handles files and
                        executes CGI scripts
Homepage:               http://www.mew.org/~kazu/
Category:               Network
Cabal-Version:          >= 1.6
Build-Type:             Simple
library
  if impl(ghc >= 6.12)
    GHC-Options:        -Wall -fno-warn-unused-do-bind
  else
    GHC-Options:        -Wall
  Exposed-Modules:      Network.Wai.Application.File
                        Network.Wai.Application.CGI
  Other-Modules:        Network.Wai.Application.Date
                        Network.Wai.Application.EnumLine
                        Network.Wai.Application.FileInfo
                        Network.Wai.Application.Header
                        Network.Wai.Application.Lang
                        Network.Wai.Application.MaybeIter
                        Network.Wai.Application.Range
                        Network.Wai.Application.Types
                        Network.Wai.Application.Utils
  Build-Depends:        base >= 4 && < 5, process, haskell98,
                        network >=2.2 && <2.3, transformers, time,
                        filepath, directory, unix,
                        containers, attoparsec,
                        wai, enumerator, bytestring, blaze-builder,
                        wai-app-static
Source-Repository head
  Type:                 git
  Location:             git://github.com/kazu-yamamoto/wai-app-file-cgi.git
